# ovis

./: annotated.html  classes.html  configure.ac  globals_defs.html  globals_enum.html  globals_eval.html  group__monitoring-functions.html  group__setup.html  group__table.html  modules.html  structldms__watch.html  test__log_8c.html  test__log_8c_source.html
config/: .gitignore
ldms/: configure.ac
ldms/man/: Plugin_store_function_csv.man  ldms_ls.man  pll-ldms-static-test.man
ldms/scripts/: pll-ldms-static-test.sh.in
ldms/scripts/examples/: .canned  app_sampler  funcstore  funcstore.1  linux_proc_sampler  linux_proc_sampler.1  linux_proc_sampler.2  lustre2_client  rdc_sampler  rdc_sampler.1
ldms/scripts/slurm-examples/: cluster  cluster.1
ldms/src/contrib/sampler/: Makefile.am
ldms/src/contrib/sampler/ldms-plugins-llnl/: Makefile.am  VERSION
ldms/src/contrib/sampler/ldms-plugins-llnl/man/: Makefile.am  Plugin_llnl_dcgm.man
ldms/src/contrib/sampler/ldms-plugins-llnl/src/: Makefile.am  lustre_client.c  lustre_client_general.c  lustre_mdt_job_stats.c  lustre_ost_general.c  lustre_ost_job_stats.c
ldms/src/contrib/sampler/watch/: Makefile.am  README.md  ldms_watch.c  ldms_watch.doxy  ldms_watch.h  ldms_watch_cat  test.c  test_log.c  test_progress.c
ldms/src/contrib/sampler/watch/background/: ldms_watch.txt  tmpfsmagic
ldms/src/contrib/sampler/watch/dox/html/: files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  group__admin-variables.html  group__library-description.html  group__log.html  group__progress.html  index.html  ldms__watch_8c.html  ldms__watch_8c_source.html  ldms__watch_8h.html  ldms__watch_8h_source.html  test_8c.html  test_8c_source.html  test__progress_8c.html  test__progress_8c_source.html
ldms/src/contrib/sampler/watch/dox/html/search/: all_6c.js  all_6d.js  all_73.js  classes_6c.js  defines_6d.js  enumvalues_6c.js  files_6c.js  files_74.js  functions_6c.js  functions_74.js  groups_61.js  groups_70.js  groups_73.js  variables_66.js  variables_6d.js  variables_72.js
ldms/src/core/: ldms.c  ldms_core.h  ldms_xprt.c
ldms/src/ldmsd/: Makefile.am  ldms_ls.c  ldmsctl.c  ldmsd.c  ldmsd_config.c  ldmsd_prdcr.c  ldmsd_request.c  ldmsd_updtr.c
ldms/src/sampler/: Makefile.am  appinfo.c  ldms_jobid.c  opa2.c  sampler_base.c
ldms/src/sampler/app_sampler/: Makefile.am  README.txt  app_sampler.c  get_stat_field.c  linux_proc_sampler.c
ldms/src/sampler/appinfo_lib/: ldms_appinfo.c
ldms/src/sampler/dstat/: dstat.c  parse_stat.c
ldms/src/sampler/ibfabric/: Makefile.am  Plugin_ibfabric.man  ibfabric.c  scibfabric.c
ldms/src/sampler/ibnet/: Makefile.am  Plugin_ibnet.man  ibnet_data.c  ibnet_plugin.c  ldms-ibnet-sampler-gen.man  scibfabric2.c
ldms/src/sampler/ibnet/scripts/: ldms-gen-lidfile.sh  ldms-ibnet-sampler-gen
ldms/src/sampler/ibnet/test/: delegate_ports.c  delegate_ports_for_testing.c  mlx5.c  mlx5_b.c  mlx5_c.c  query_out2
ldms/src/sampler/llnl/: Makefile.am  Plugin_lustre_client.man  edac.c  lustre_client.c  lustre_client.h  lustre_client_general.c  lustre_client_general.h
ldms/src/sampler/netlink/: netlink-notifier.c  netlink-notifier.man
ldms/src/sampler/rdc_sampler/: Makefile.am  Plugin_rdc_sampler.man  ldms_rdc_schema_name.man  rdc_plugin.c  rdcinfo.c  rdcinfo.h
ldms/src/sampler/tx2mon/: Plugin_tx2mon.man  notes  tx2mon.c
ldms/src/store/: store_csv.c  store_csv_common.c  store_function_csv.c  store_rabbitkw.c  store_rabbitv3.c  store_sos.c
ldms/src/store/store_flatfile/: store_flatfile.c
ldms/src/third-plugins/: Makefile.am  exclude-third.txt
ldms/src/third-plugins/ldms-plugins-llnl/: .gitignore  Makefile.am  README.md  configure.ac  ldms-plugins-llnl.spec.in  ldms_build.sh
ldms/src/third-plugins/ldms-plugins-llnl/man/: Plugin_llnl_lustre_client.man
ldms/src/third-plugins/ldms-plugins-llnl/patches/: doc.patch
ldms/src/third-plugins/ldms-plugins-llnl/src/: Makefile.am  dcgm.c  lustre_mdt.c  lustre_mdt_general.c  lustre_ost.c
ldms/src/third-plugins/my_plugin/src/: Makefile.am
lib/src/coll/: htbl.c  idx.c
lib/src/mmalloc/: mmalloc.c
lib/src/ovis_auth/: auth.c
lib/src/ovis_ctrl/: ctrl.c
lib/src/ovis_json/: ovis_json.c  ovis_json.h  ovis_json_test.c
lib/src/ovis_util/: big_dstring.h  dstring.c  dstring.h
lib/src/third/: Makefile.am
lib/src/zap/: zap.c
lib/src/zap/fabric/: zap_fabric.c  zap_fabric.h
lib/src/zap/rdma/: zap_rdma.c  zap_rdma.h
lib/src/zap/sock/: zap_sock.c
lib/src/zap/ugni/: zap_ugni.c
m4/: contrib_llnl.m4
packaging/: make-all-rhel7.sh  make-all-top.sh
search/: all_65.js  all_70.js  all_74.js  defines_6c.js  enums_6c.js  groups_6c.js  groups_6d.js  groups_74.js  search.js  typedefs_6c.js  variables_64.js  variables_6c.js  variables_70.js  variables_73.js  variables_74.js
util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/: ldms-functions.in
