ACLOCAL_AMFLAGS = -I m4
SUBDIRS = .
lib_LTLIBRARIES =
pkglib_LTLIBRARIES =

if ENABLE_IPMIREADER
    MAYBE_IPMIREADER = ipmireader
endif
SUBDIRS += $(MAYBE_IPMIREADER)


if ENABLE_TUTORIAL_SAMPLER
    MAYBE_TUTORIAL_SAMPLER = tutorial
endif
SUBDIRS += $(MAYBE_TUTORIAL_SAMPLER)

if ENABLE_LDMS_PLUGINS_LLNL
    MAYBE_LDMS_PLUGINS_LLNL = ldms-plugins-llnl
endif
SUBDIRS += $(MAYBE_LDMS_PLUGINS_LLNL)




